plugins {
    id 'groovy'
    id 'jacoco'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'de.besessener'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.groovy:groovy:4.0.28'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'io.fabric8:kubernetes-client:7.4.0'
    implementation 'io.minio:minio:8.6.0'
    implementation("org.apache.groovy:groovy-json:4.0.28")
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.spockframework:spock-spring:2.4-M7-groovy-5.0'
    testImplementation("org.apache.groovy:groovy-json:4.0.28")
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.20.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

test {
    jvmArgs("-XX:+EnableDynamicAgentLoading")
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
}

jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    reports {
        xml.required = true
        csv.required = false
        html.outputLocation = layout.buildDirectory.dir('html')
    }
}
